centralized header into includes; minor style fixes, some markup semantics

--- a/regexhero.css
+++ b/regexhero.css
@@ -1,3 +1,18 @@
+*{
+    font-family: Helvetica, Arial, sans-serif;  
+}
+
+h1#head{
+    height:175px; 
+    width:400px; 
+    margin:10px auto; 
+    text-indent:100%; 
+    white-space: nowrap; 
+    overflow: hidden; 
+    background:url('regexQuest_logo.png') left top no-repeat;
+}
+h1#head a{ display:block; height:100%; width:100%;}
+
 #title_heading {
 	display:none;
 	margin-left: auto;
