some more style fixes and reordered some index content

--- a/regexhero.css
+++ b/regexhero.css
@@ -10,6 +10,7 @@ h1#head{
     white-space: nowrap; 
     overflow: hidden; 
     background:url('regexQuest_logo.png') left top no-repeat;
+    background-size: 400px 175px;
 }
 h1#head a{ display:block; height:100%; width:100%;}
 
@@ -42,6 +43,11 @@ h1#head a{ display:block; height:100%; width:100%;}
 	background-color: #CCFFCC;
 	border-radius: 5px;
 	text-decoration: none;
+    cursor:pointer;
+}
+input.button{
+    font-size:1em;
+    padding:0;
 }
 
 #content {
@@ -51,10 +57,11 @@ h1#head a{ display:block; height:100%; width:100%;}
 }
 
 #about_div {
-	display: none;
+	display: block;
 	border: 1px solid #000000;
-	background-color: #cccccc;
+	background-color: #dedede;
 	border-radius: 5px;
+	padding:10px;
 }
 
 #question {
