--- a/regexhero.css
+++ b/regexhero.css
@@ -119,3 +119,13 @@ input.button{
 	display:inline-block;
 	font-weight: bold;
 }
+
+.hero-unit{
+    text-align:center;
+}
+.hero-unit .small{
+    font-size:.8em;
+}
+.hero-unit .main-cta{
+    padding:2em;
+}
